added meta tag to make icons work in firefox

--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -71,6 +71,7 @@ body {
   grid-template-areas:
     "img title title"
     "img desc desc";
+  background-color: #393f4d;
   margin: 25px;
   box-shadow: 10px 10px 10px 3px #333;
   max-width: 800px;
