--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -50,7 +50,8 @@ body {
 
 .dark-gray-bg {
   display: flex;
-  flex: 1;
+  // flex: 1;
+  flex-direction: column;
   justify-content: center;
   background-color: #1d1e22;
   width: 100vw;
