updated gray bg

--- a/src/styles/_utility.scss
+++ b/src/styles/_utility.scss
@@ -23,7 +23,7 @@ $pageAnimation: fadeIn 1s linear;
 // Remove the browsers built-in styling for lists elements.
 @mixin reset-list {
   padding-left: 0;
-  list-style: none;
+  list-style-type: none;
   text-decoration: none;
   margin: 0;
 }
