--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -62,6 +62,7 @@ body {
   align-self: center;
   background-color: #383838;
   padding: 50px;
+  margin-top: 30px;
 
   p {
     max-width: 600px;
@@ -77,7 +78,7 @@ body {
 //work page
 
 .top-title {
-  margin: 30px;
+  text-align: left;
 }
 
 .print-row {
@@ -131,6 +132,24 @@ body {
 
 .item-title i {
   color: #393f4d;
+}
+
+.print-item-icons {
+  margin: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background: $golden;
+  color: #393f4d;
+
+  a {
+    text-align: right;
+  }
+
+  span {
+    justify-self: center;
+    align-self: center;
+  }
 }
 
 .item-icons {
