--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -70,6 +70,13 @@ body {
     line-height: 1.3em;
   }
 
+  .bigger-font {
+    max-width: 800px;
+    font-size: 19px;
+    // line-height: 1.1em;
+    margin: 25px;
+  }
+
   li {
     list-style-type: none !important;
   }
@@ -113,6 +120,7 @@ body {
 .bigger-font {
   font-size: 19px;
   line-height: 20px;
+  margin: 25px;
 }
 
 .item-img {
