--- a/src/styles/resume.scss
+++ b/src/styles/resume.scss
@@ -35,7 +35,7 @@
   }
 
   h4 {
-    margin: 5px 0;
+    margin: 10px 0;
   }
 
   .resDecor {
@@ -52,12 +52,15 @@ ul.bullets {
 
 .skillset {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .skills {
   line-height: 1.4em;
   list-style-type: none;
   padding-inline-start: 0;
+  width: 150px;
+  margin: 1em;
 }
 
 .placeDate {
