--- a/src/styles/resume.scss
+++ b/src/styles/resume.scss
@@ -1,8 +1,10 @@
 .resume {
   width: 100%;
+  max-width: 900px;
   margin-top: 0;
   display: flex;
   flex-direction: column;
+  align-self: center;
   flex-wrap: wrap;
   background-color: $silkymauve;
 
