resume font styles

--- a/src/styles/_utility.scss
+++ b/src/styles/_utility.scss
@@ -8,7 +8,7 @@ $base-font-weight: 400;
 $box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 $pageAnimation: fadeIn 1s linear;
 
-$silkymauve: #dcc3bc;
+$silkymauve: #ccb8b3;
 $sexygrey: #353535;
 $goldenink: lighten($golden, 10%);
 
