--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,26 +1,35 @@
 .about {
   width: 95%;
-  align-self: center;
   margin: 4em auto;
-  justify-content: center;
 
+  section {
+    display: flex;
+    flex-direction: column;
+    margin: 1em;
+    // position: relative;
+    // justify-content: space-around;
+    width: 100%;
+  }
 
  h4 {
-    flex-basis: 20%;
-    text-align: right;
-    padding-right: 1em;
-    height: 30px;
-    position: sticky;
-    top: 100px;
+    // flex-basis: 25%;
+    // padding-right: 1em;
+    font-size: 2em;
+    margin: .7em 0 .3em 0;
+    // height: 30px;
+    // position: absolute;
+    // top: 100px;
   }
+
   p {
     font-size: 1.3em;
     line-height: 1.4em;
     font-weight: 100;
+    margin: 20px 0;
   }
 
-  div {
-    flex-basis: 70%;
+  p:first-child {
+    margin: 0;
   }
 
   strong {
@@ -28,26 +37,48 @@
     font-weight: 300;
   }
 
-  section {
-    display: flex;
-    // position: relative;
-    // justify-content: space-around;
-    // width: 100%;
-  }
-
   .pets {
     width: 100%;
     border-radius: 50%;
     max-width: 200px;
     margin: 5px;
-      box-shadow: 1px 1px 1px 1px;
+    box-shadow: 1px 1px 1px 1px;
   }
 
   .pet-section {
+    display: flex;
+    flex-direction: row;
     justify-content: space-evenly;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 900px) {
+
+  .about section {
+    display: flex;
+    flex-direction: row;
+    margin: 2em;
+    // position: relative;
+    // justify-content: space-around;
+    width: 100%;
+
+   h4 {
+      width: 20%;
+      // padding-right: 1em;
+      // font-size: 2em;
+      margin: 0 0 .3em 0;
+      // height: 30px;
+      // position: absolute;
+      // top: 100px;
+    }
+}
+
+  div.about_description {
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+    width: 80%;
+    align-self: flex-end;
+  }
 
 }
