--- a/src/components/print/print.scss
+++ b/src/components/print/print.scss
@@ -5,6 +5,16 @@
   grid-auto-flow: dense;
 }
 
+.adLong,
+.adWide,
+.adshort
+  {
+    padding: .5em;
+    background: #bd8c7d;
+    box-shadow: 1px 1px 6px #444444;
+    grid-column-gap: 1em;
+  }
+
 .adLong {
   grid-row: span 2;
   // grid-column: span 2;
@@ -15,7 +25,6 @@
 .adWide {
   width: 100%;
   max-width: 400px;
-  box-shadow: 1px 1px 6px #666666;
 }
 
 .adshort {
