--- a/src/components/web/web.scss
+++ b/src/components/web/web.scss
@@ -6,7 +6,7 @@
   // justify-content: center;
   // height: 500px;
   width: 80%;
-  // max-width: 600px;
+  max-width: 600px;
   // align-items: center;
   // background: #bd8c7d;
 }
