--- a/src/styles/toggleButton.scss
+++ b/src/styles/toggleButton.scss
@@ -17,6 +17,7 @@
   right: 10px;
   transition: all 0.4s ease-in-out;
   z-index: 99;
+  outline: 1px solid transparent;
 }
 
 .bar1, .bar2, .bar3 {
