--- a/src/components/package/package.scss
+++ b/src/components/package/package.scss
@@ -4,14 +4,17 @@
   max-width: 200px;
   width: 100%;
   margin: 0.5em;
+  padding: 1em;
+  background: #bd8c7d;
 }
 
 .package {
   display: flex;
+  flex-wrap: wrap;
   margin: 0 auto;
   justify-content: center;
   height: auto;
   align-items: center;
   max-width: 90%;
-  background: #bd8c7d;
+
 }
