--- a/src/styles/resume.scss
+++ b/src/styles/resume.scss
@@ -36,8 +36,8 @@
   }
 
   h3 {
+    margin-bottom: .5em;
     padding-bottom: 0;
-    // margin-block-start: 50px;
     border-bottom: 12px solid #7A716D;
     font-family: $heading-font-fam;
   }
