--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,84 +1,233 @@
-.about {
-  width: 95%;
-  margin: 4em auto;
 
-  section {
+.main {
+  display: flex;
+  flex-direction: column;
+  background: white;
+  min-height: 100vh;
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1em 0;
+  min-height: 100vh;
+
+  h5 {
+    font-size: 2rem;
+    line-height: 1em;
+    margin: 0.4em 0;
+  }
+
+  h4 {
+    font-weight: 100;
+  }
+}
+
+header {
+  min-height: 100vh;
+  background-image: linear-gradient(to left top, #fcee71,#fcee71, #fcda56, #fcda56, #fdc63b);
+  padding-top: 10%;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: center;
+  align-items: center;
+}
+
+.header-image {
+  width: 100%;
+  // max-height: 575px;
+  max-width: 400px;
+}
+.header-content {
+  min-height: 100vh;
+  color: #465c8c;
+  margin: 0 auto;
+  width: 95%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  // padding: 30px 0;
+
+  // p {
+  //   font-size: 1.7em;
+  //   line-height: 1.5em;
+  //   font-weight: 400;
+  // }
+}
+
+.past {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  h4 {
+    text-align: center;
+    font-size: 2.3rem;
+  }
+
+  .past-content {
+    color: #222;
     display: flex;
     flex-direction: column;
-    margin: 1em;
-    // position: relative;
-    // justify-content: space-around;
-    width: 100%;
-  }
+    justify-content: center;
+    align-items: center;
+    // background-image: url("https://source.unsplash.com/1500x900/?sunset, bright");
+    padding: 30px 0;
 
- h4 {
-    // flex-basis: 25%;
-    // padding-right: 1em;
-    font-size: 2em;
-    margin: .7em 0 .3em 0;
-    // height: 30px;
-    // position: absolute;
-    // top: 100px;
-  }
-
-  p {
-    font-size: 1.3em;
-    line-height: 1.4em;
-    font-weight: 100;
-    margin: 20px 0;
-  }
-
-  p:first-child {
-    margin: 0;
-  }
-
-  strong {
-    font-size: 1.35em;
-    font-weight: 300;
-  }
-
-  .pets {
-    width: 100%;
-    border-radius: 50%;
-    max-width: 200px;
-    margin: 5px;
-    box-shadow: 1px 1px 1px 1px;
-  }
-
-  .pet-section {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-  }
-}
-
-@media screen and (min-width: 900px) {
-
-  .about section {
-    display: flex;
-    flex-direction: row;
-    margin: 2em;
-    // position: relative;
-    // justify-content: space-around;
-    width: 100%;
-
-   h4 {
-      width: 20%;
-      // padding-right: 1em;
-      // font-size: 2em;
-      margin: 0 0 .3em 0;
-      // height: 30px;
-      // position: absolute;
-      // top: 100px;
+    .past-icons {
+      width: 75px;
     }
+
+    p {
+      text-align: left;
+      width: 85%;
+    }
+
+    ul {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+       li {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 3%;
+      }
+
+      li .past-title {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        // font-size: 1.2em;
+        width: 300px;
+
+        h5 {
+          color: #465c8c;
+        }
+      }
+    }
+  }
 }
 
-  div.about_description {
-    -webkit-column-count: 2;
-    -moz-column-count: 2;
-    column-count: 2;
-    width: 80%;
-    align-self: flex-end;
+.present {
+
+  .present-content {
+    color: #222;
+    display: flex;
+    flex-direction: column;
+    // justify-content: center;
+    align-items: center;
+    padding: 5rem 1rem;
+    background-image: linear-gradient(to right top, #7ca1f7, #7ca1f7, #7ca1f7, #7ca1f7, #6989d2, #6989d2, #6989d2, #6989d2, #6989d2, #6989d2);
+
+    ul {
+      display: flex;
+      flex-flow: row wrap;
+      align-items: center;
+      justify-content: center;
+      max-width: 1200px;
+
+      li {
+        display: flex;
+        flex: 1;
+        flex-basis: 250px;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background: hsla(0,0%,100%, .5)	;
+        height: 200px;
+        max-width: 300px;
+        list-style-type: none;
+        padding: 3%;
+        margin: 10px;
+      }
+
+      h5 {
+        color: #465c8c;
+        font-size: 2.7rem;
+        padding: 1rem;
+        text-align: center;
+        border: 2px solid whitesmoke;
+      }
+    }
+  }
+}
+
+h4 {
+  font-size: 2em;
+  margin: 0;
+}
+
+section.pet-section {
+  display: none;
+  flex-direction: row;
+  justify-content: space-evenly;
+  height: 50%;
+}
+
+.pets {
+  width: 100%;
+  border-radius: 50%;
+  max-width: 200px;
+  height: 200px;
+  margin: 5px;
+  box-shadow: 1px 1px 1px 1px;
+}
+
+@media screen and (min-width: 850px) {
+  header {
+    padding-top: 20%;
+    flex-direction: row;
+    align-items: flex-start;
   }
 
+  .header-content {
+    width: 100%;
+    padding: 0 3%;
+    // max-width: 800px;
+  }
+
+  .header-content p {
+    width: 95%;
+    line-height: 1.7rem;
+  }
+  .past {
+    h4 {
+      text-align: center;
+    }
+
+    .past-content {
+      color: #222;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 10px;
+      // width: 80%;
+
+      p { text-align: left; }
+
+      ul {
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+
+        li {
+          flex-direction: row;
+          justify-content: space-around;
+
+          p {
+            // width: 60%;
+            max-width: 600px;
+          }
+        }
+      }
+    }
+  }
 }
