--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,92 +1,104 @@
-.introContainer {
-  display: flex;
-  flex-direction: column;
-  height: 85vh;
+.office-background {
+  position: absolute;
+  // border: 2px solid white;
+  // background: blue;
+  z-index: -1;
+  bottom: 0;
+  // width: 500px;
+  height: 100vh;
+  right: 0;
+  // left: 0;
+  top: 0;
+}
+
+.yellow-line {
+  height: 30px;
   width: 100%;
-  align-items: flex-end;
-  justify-content: flex-end;
-  margin-left: 3em;
+  position: absolute;
+  background: #f8c43e;
+  left: 0;
+  bottom: 0;
+  z-index: -2;
+}
+
+.introContainer {
+  // border: 2px solid white;
+  align-self: flex-start;
+  margin-top: 75px;
+  margin: 7%;
 
   img {
     width: 100%;
     align-self: flex-start;
-    max-width: 200px;
-    max-height: 200px;
+    max-width: 150px;
+    max-height: 150px;
     border-radius: 50%;
-    border: 3px solid goldenrod;
+    border: 3px solid #f7d37c;
     margin: 15px;
+    display: none;
   }
-}
-.intro-headline {
-  display: flex;
-  align-items: center;
-}
-
-h2.hello {
-  font-family: 'Rochester', cursive;
-  font-size: 3em;
-  margin: 0;
-  padding: 0;
-  // line-height: 2em;
-  text-align: left;
-  text-shadow: 2px 4px 2px rgb(29, 30, 34);
-  position: relative;
-  z-index: 0;
-}
-
-ul.introText {
-  font-family: 'Josefin Sans', sans-serif;
-  width: 100%;
-  max-width: 425px;
-  display: flex;
-  padding-inline-start: 0;
-
-  li {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    // text-align: center;
-    // margin-left: 0;
-  }
-}
-
-.introText li {
-  align-self: center;
-}
-
-.introContact {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.introCard {
-  display: flex;
-  // width: 200px;
-  font-size: 1.2em;
-  margin-left: 0;
 }
 
 .introBox {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  width: 95%;
+  height: 80vh;
+  justify-content: flex-start;
+  color: #f7d37c;
 
-  h1 {
-    font-size: 1.5em;
-    border-bottom: 3px solid goldenrod;
-    padding-bottom: 10px;
-    color: white;
+  .intro-headline {
+    // justify-self: 'flex-start'
+  }
+
+  .hello > h1,
+  .hello > h2 {
+    // font-family: 'Rochester', cursive;
+    font-size: 2em;
+    position: relative;
+    z-index: 0;
+    color: #f7d37c;
+    text-align: left;
+    margin: 0;
+    line-height: 1.5em;
   }
 }
 
-@media screen and (min-width: 800px) {
-  .introContainer {
-    flex-direction: row;
+span.light {
+  font-weight: 100;
+}
 
-    img {
-      align-self: flex-end;
+.ctas {
+  margin: 7%;
+  width: 100%;
+
+  .cta-1,
+  .cta-2,
+  .cta-3 {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  p {
+    border: 1px slid white;
+    font-size: 1.2rem;
+    margin-left: 20px;
+  }
+
+  i {
+    font-size: 1.5rem;
+  }
+}
+
+
+@media screen and (min-width: 800px) {
+  .introBox {
+
+    height: 80vh;
+    justify-content: space-around;
+
+    .intro-headline {
+      // justify-self: 'flex-start'
     }
   }
 }
