--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -25,6 +25,10 @@
   li:last-child {
   margin-right: 70px;
   }
+
+  li > a {
+    color: #fcee71;
+  }
 }
 
 @media screen and (min-width: 800px) {
