--- a/src/components/print/print.scss
+++ b/src/components/print/print.scss
@@ -1,25 +1,50 @@
-
 .print {
-  grid-template-columns: repeat(auto-fit, minmax(100px, 300px));
-  grid-template-rows: auto;
-  grid-auto-flow: dense;
+  color: #f7d37c;
 }
 
-.adLong,
-.adWide,
-.adshort
-  {
-    padding: .5em;
-    background: #bd8c7d;
-    box-shadow: 1px 1px 6px #444444;
-    grid-column-gap: 1em;
+.print-images {
+  display: flex;
+  flex-flow: row wrap;
+  // align-content: center;
+  justify-content: center;
+}
+
+.print-small {
+  display: flex;
+  flex-direction: column;
+}
+
+.print-desc {
+  border: 1px solid #f7d37c;
+  min-width: 300px;
+  height: 388px;
+}
+
+.print-desc-text {
+  padding: 5%;
+  display: flex;
+  flex-direction: column;
+
+  h3,
+  .fa-arrow-right {
+    align-self: center;
+    margin: .7em;
   }
 
-.adLong {
-  grid-row: span 2;
-  // grid-column: span 2;
-  max-width: 400px;
+  p {
+    font-size: 1.2rem;
+    line-height: 1.4rem;
+  }
+}
+
+.responsive {
   width: 100%;
+}
+
+.poster {
+  max-width: 300px;
+  // min-width: 200px;
+  margin: 1%;
 }
 
 .adWide {
