--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -26,17 +26,6 @@
   align-self: flex-start;
   margin-top: 75px;
   margin: 7%;
-
-  img {
-    width: 100%;
-    align-self: flex-start;
-    max-width: 150px;
-    max-height: 150px;
-    border-radius: 50%;
-    border: 3px solid #f7d37c;
-    margin: 15px;
-    display: none;
-  }
 }
 
 .introBox {
@@ -46,13 +35,8 @@
   justify-content: flex-start;
   color: #f7d37c;
 
-  .intro-headline {
-    // justify-self: 'flex-start'
-  }
-
   .hello > h1,
   .hello > h2 {
-    // font-family: 'Rochester', cursive;
     font-size: 2em;
     position: relative;
     z-index: 0;
@@ -68,25 +52,51 @@ span.light {
 }
 
 .ctas {
-  margin: 7%;
+  margin: 7% 0;
   width: 100%;
+  // border: 1px solid white;
 
   .cta-1,
   .cta-2,
   .cta-3 {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 90px 2fr;
+    grid-template-rows: 50px 50px;
+    grid-template-areas:
+      "pic headline"
+      "pic body";
+
+    h2 {
+      grid-area: headline;
+      margin-bottom: 0;
+      align-self: end;
+    }
+  }
+
+  img {
+    // width: 100%;
+    max-width: 60px;
+    // max-height: 75px;
+    border-radius: 50%;
+    border: 3px solid #f7d37c;
+  }
+a,
+  .intro-icon {
+    grid-area: pic;
+    align-self: center;
+    justify-self: center;
   }
 
   p {
-    border: 1px slid white;
+    grid-area: body;
+    // border: 1px solid white;
     font-size: 1.2rem;
-    margin-left: 20px;
+    margin-top: 0;
+    align-self: start;
   }
 
   i {
-    font-size: 1.5rem;
+    // font-size: 1.5rem;
   }
 }
 
@@ -100,5 +110,11 @@ span.light {
     .intro-headline {
       // justify-self: 'flex-start'
     }
+  }
+
+  .cta-1 > p,
+  .cta-2 > p,
+  .cta-3 > p {
+    max-width: 70%;
   }
 }
