--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -29,7 +29,6 @@ li {
 body {
   margin: 0;
   height: 100%;
-  // background-color: green;
 }
 
 .App {
@@ -52,7 +51,7 @@ h2.top-title {
   text-align: center;
   padding: 0.5em;
   margin-top: 3em;
-  font-family: 'Rochester', cursive;
+  // font-family: 'Rochester', cursive;
   color: $golden;
 }
 // not sure I need this amymore
