--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -4,6 +4,13 @@
   flex-direction: column;
   background: white;
   min-height: 100vh;
+  animation: pageEntry;
+  animation-duration: 1s;
+}
+
+@keyframes pageEntry {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
 }
 
 section {
@@ -32,12 +39,16 @@ header {
   flex-direction: column-reverse;
   justify-content: center;
   align-items: center;
+
+  h5 {
+    font-size: 1.5rem;
+    margin-bottom: 0;
+  }
 }
 
 .header-image {
   width: 100%;
-  // max-height: 575px;
-  max-width: 400px;
+  max-width: 300px;
 }
 .header-content {
   min-height: 100vh;
@@ -47,13 +58,6 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  // padding: 30px 0;
-
-  // p {
-  //   font-size: 1.7em;
-  //   line-height: 1.5em;
-  //   font-weight: 400;
-  // }
 }
 
 .past {
@@ -65,6 +69,7 @@ header {
   h4 {
     text-align: center;
     font-size: 2.3rem;
+    color: #465c8c;
   }
 
   .past-content {
@@ -73,7 +78,6 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    // background-image: url("https://source.unsplash.com/1500x900/?sunset, bright");
     padding: 30px 0;
 
     .past-icons {
@@ -102,7 +106,6 @@ header {
         display: flex;
         flex-direction: column;
         align-items: center;
-        // font-size: 1.2em;
         width: 70%;
 
         h5 {
@@ -121,10 +124,15 @@ header {
     color: #222;
     display: flex;
     flex-direction: column;
-    // justify-content: center;
     align-items: center;
     padding: 5rem 1rem;
     background-image: linear-gradient(to right top, #7ca1f7, #7ca1f7, #7ca1f7, #7ca1f7, #6989d2, #6989d2, #6989d2, #6989d2, #6989d2, #6989d2);
+
+    h4 {
+      color: white;
+      font-weight: bold;
+      margin: 1%;
+    }
 
     ul {
       display: flex;
@@ -182,7 +190,7 @@ section.pet-section {
 
 @media screen and (min-width: 850px) {
   header {
-    padding-top: 20%;
+    // padding-top: 20%;
     flex-direction: row;
     align-items: flex-start;
   }
@@ -197,6 +205,30 @@ section.pet-section {
     width: 95%;
     line-height: 1.7rem;
   }
+
+  .header-content-1 {
+    display: flex;
+      width: 95%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .header-content-2 {
+    display: flex;
+      width: 95%;
+
+  }
+
+  .header-content-1 {
+    justify-content: center;
+  }
+
+  .header-content-1 > div,
+  .header-content-2 > div {
+    width: 60%;
+    margin: 2%;
+  }
+
   .past {
     h4 {
       text-align: center;
