--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,13 +1,9 @@
 .office-background {
   position: absolute;
-  // border: 2px solid white;
-  // background: blue;
   z-index: -1;
   bottom: 0;
-  // width: 500px;
   height: 100vh;
   right: 0;
-  // left: 0;
   top: 0;
 }
 
@@ -24,15 +20,19 @@
 span.light { font-weight: 100; }
 
 .introContainer {
-  // border: 2px solid white;
-  // align-items: space-between;
   margin: 75px 0 0 3%;
-}
+  animation: pageEntry;
+  animation-duration: 1.5s;
+  }
+
+  @keyframes pageEntry {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+  }
 
 .introBox {
   display: flex;
   flex-direction: column;
-  // height: 80vh;
   justify-content: end;
   color: #f7d37c;
 
@@ -56,7 +56,7 @@ span.light { font-weight: 100; }
     display: grid;
     grid-template-columns: 90px 2fr;
     grid-template-rows: 75px;
-    grid-template-areas:
+    grid-template:
       "pic headline";
     border-radius: 20px;
     background: #444;
