--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -17,7 +17,7 @@ section {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 1em 0;
+  // padding: 1em 0;
   min-height: 100vh;
 
   h5 {
