--- a/src/components/useCases/useCases.scss
+++ b/src/components/useCases/useCases.scss
@@ -5,7 +5,6 @@ h1 {
 }
 
 .case-study {
-  background: white;
   width: 100%;
   font-family: 'Josefin Sans', sans-serif;
   animation: pageEntry;
@@ -209,8 +208,8 @@ figcaption {
 .content-development-example-2 {
   grid-area: ex2;
   display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .content-development-example-2-image {
@@ -229,7 +228,42 @@ figcaption {
 .strategy-page-text {
   grid-area: text;
   max-width: 800px;
- }
+}
+
+.task-flow {
+  display: flex;
+  flex-direction: column;
+}
+
+.task-flow-box-end,
+.task-flow-box {
+  height: 75px;
+  width: 50%;
+  border: 2px solid #465c8c;
+  border-radius: 10px;
+  position: relative;
+  display: flex;
+  place-items: center;
+  justify-content: center;
+  margin: 0 20px 20px 0;
+
+  p {
+    width: 90%;
+    font-size: 1.2rem;
+    line-height: 1.3rem;
+    font-weight: bold;
+  }
+
+}
+
+.task-flow-box::after {
+  position: absolute;
+  font-family: 'FontAwesome';
+  content: '\f063';
+  bottom: -20px;
+  right: 50%;
+}
+
 
 .content-development-example-1-image,
 .strategy-page-image {
@@ -286,6 +320,18 @@ figcaption {
 
 @media screen and (min-width: 850px) {
   .engagement-list { justify-content: left; }
+
+  .task-flow-box::after {
+    position: absolute;
+    font-family: 'FontAwesome';
+    content: '\f061';
+    top: 40%;
+    right: -20px;
+  }
+
+  .task-flow {
+    flex-direction: row;
+  }
 }
 
 @media screen and (min-width: 900px) {
